@@ -1,3 +1,9 @@
+2012-11-16  Tom Tromey  <tromey@redhat.com>
+
+	* configure.ac: Invoke AM_MAINTAINER_MODE.
+	* aclocal.m4, configure, Makefile.in, asan/Makefile.in,
+	interception/Makefile.in, sanitizer_common/Makefile.in: Rebuild.
+
 2012-11-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* configure.ac: Properly set MULTISUBDIR.
